<resources>
    <string name="app_name">WatchWitch</string>
    <string name="title_activity_health_log">HealthLogActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="watchwitch">WatchWitch</string>
    <string name="witchEmoji">🧙‍♀️</string>
    <string name="listen_for_connections">listen for connections</string>
    <string name="health_log">Health</string>
    <string name="log_network_stats">Firewall</string>
    <string name="packet_log">Debug Log</string>
    <string name="set_key">Set Key</string>
    <string name="watch_state_label">Watch</string>
    <string name="transit_key_explanation">This secret will be used to decrypt key material sent from the iPhone</string>

    <string name="healthlog_locationseries">GPS Track</string>
    <string name="healthlog_gps_points">%1$d points, tap to view</string>
    <string name="healthlog_min_max">min: %1$s max: %2$s</string>
    <string name="health_unlock_ecg">Unlock ECG &amp; Cycles</string>
    <string name="reset_sync_status">reset sync</string>
    <string name="osm_attribution">© OpenStreetMap contributors</string>

    <string name="status_not_running">not running</string>
    <string name="status_stopping">stopping…</string>
    <string name="status_starting">starting…</string>
    <string name="status_listening">listening on %1$s:%2$d</string>
    <string name="status_error">error: %1$s</string>

    <string name="list_empty">nothing here yet 🦗</string>
    <string name="netstats_packets">packets</string>
    <string name="netstats_received">received</string>
    <string name="netstats_sent">sent</string>



    <string name="service_shoes_desc">SHOES internet sharing for Apple Watch</string>
    <string name="service_alloy_desc">Alloy message handling for Apple Watch</string>
    <string name="service_notify_desc">Push notification forwarding for Apple Watch</string>
    <string name="service_shoes_label">WatchWitch SHOES Server</string>
    <string name="service_alloy_label">WatchWitch Alloy Server</string>
    <string name="service_notify_label">WatchWitch Notification Listener</string>

    <string name="chat_title">Chitchat</string>
    <string name="chat_message_input_placeholder">Message</string>
    <string name="chat_send_button">Send</string>
    <string name="chat_send_failed">Failed to send, no channel</string>

    <string name="files_title">Received Files</string>
    <string name="files_no_files">No files yet 🦗</string>
    <string name="files_delete">delete file</string>
    <string name="files_save">save file</string>
    <string name="files_image_preview_alttext">preview of image file</string>
    <string name="files_store_failed">Failed to save file</string>
    <string name="firewall_allow_host">Allow?</string>
    <string name="firewall_allow">Allow</string>
    <string name="firewall_deny">Deny</string>
    <string name="firewall_allow_by_default">Allow by default</string>
    <string name="watchstate_no_open_apps">No Open Apps ❇️</string>
    <string name="watchstate_alarms">Alarms</string>
    <string name="watchstate_open_apps">Open Apps</string>
    <string name="watch_state">Watch State</string>
    <string name="watchstate_no_alarms">No Alarms 💤</string>
    <string name="notify_permission_allow">Allow</string>
    <string name="notify_permission_never">Never</string>
    <string name="notify_permission_not_now">Not now</string>
    <string name="allow_notification_access">Allow Notification Access</string>
    <string name="notify_permission_capability">WatchWitch can forward notifications you receive on your phone to your watch.</string>
    <string name="notify_permission_need_permission">To do so, we need your permission to read incoming notifications in the settings.</string>
</resources>