<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        card_view:cardBackgroundColor="?attr/colorPrimary"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/labelFilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                tools:text="something.apple.com" />

            <TextView
                android:id="@+id/labelBundle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                tools:text="From: com.apple.weather" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icoPackets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/netstats_packets"
                    card_view:srcCompat="@drawable/icon_network_packet"
                    card_view:tint="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/labelPackets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnPrimary"
                    tools:text="42" />

                <ImageView
                    android:id="@+id/icoUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/netstats_sent"
                    card_view:srcCompat="@drawable/icon_network_upload"
                    card_view:tint="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/labelUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="?attr/colorOnPrimary"
                    tools:text="32kb" />

                <ImageView
                    android:id="@+id/icoDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/netstats_received"
                    card_view:srcCompat="@drawable/icon_network_download"
                    card_view:tint="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/labelDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnPrimary"
                    tools:text="128kb" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
