<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="4dp"
        card_view:cardBackgroundColor="?attr/colorPrimary"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/labelFilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                tools:text="Sample Title" />

            <TextView
                android:id="@+id/labelFileSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="TextView"
                android:textColor="?attr/colorOnPrimary"
                tools:text="42 kB" />

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:background="?attr/colorOnPrimary"
                android:contentDescription="@string/files_image_preview_alttext"
                android:outlineProvider="paddedBounds"
                android:padding="3dp"
                card_view:srcCompat="@drawable/witch_monochrome"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnDeleteFile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0"
                    android:background="@drawable/chat_inputbar"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:contentDescription="@string/files_delete"
                    app:tint="?attr/colorPrimary"
                    card_view:srcCompat="@drawable/icon_delete" />

                <ImageButton
                    android:id="@+id/btnSaveFile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0"
                    android:background="@drawable/chat_inputbar"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:contentDescription="@string/files_save"
                    app:tint="?attr/colorPrimary"
                    card_view:srcCompat="@drawable/icon_download" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/labelTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:alpha="1"
                    android:gravity="bottom"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorOnPrimary"
                    tools:text="Sun 13:37" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
